--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "agent_to_agent_testing",
+	"name": "pranthora-agent_to_agent_testing",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
