--- a/config.json
+++ b/config.json
@@ -5,6 +5,6 @@
 	},
 	"pranthora": {
 		"api_key": "a967a994b2ee02c0b4578e5e02bba7d3",
-		"base_url": "https://api.pranthora.com"
+		"base_url": "http://localhost:5050"
 	}
 }
