Record silences to better simulate agent conversations

--- a/config.json
+++ b/config.json
@@ -6,5 +6,8 @@
 	"pranthora": {
 		"api_key": "a967a994b2ee02c0b4578e5e02bba7d3",
 		"base_url": "http://localhost:5050"
+	},
+	"audio": {
+		"chunk_duration_ms": 25
 	}
 }
