--- a/config.json
+++ b/config.json
@@ -7,6 +7,11 @@
 		"api_key": "a967a994b2ee02c0b4578e5e02bba7d3",
 		"base_url": "http://localhost:5050"
 	},
+	"livekit": {
+		"url": "wss://jill-80u1rdyp.livekit.cloud",
+		"api_key": "APIG236hF2mb5hp",
+		"api_secret": "CU743exSdHD1JeIJf0UzUdTjClVrYbl9tuUefvttfBeb"
+	},
 	"audio": {
 		"chunk_duration_ms": 20,
 		"connection_sync_timeout_seconds": 10
